# DSP-Seed-Finder

./: .eslintrc.cjs  .gitignore  .prettierrc.cjs  404.html  Cargo.toml  README.md  generateThemeProto.js  index.html  lingui.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
assets/: dsp_seed_finder_bg-6TuVMWIa.wasm  dsp_seed_finder_bg-DAdOz1xb.wasm  dsp_seed_finder_bg-IpZeG5CY.wasm  dsp_seed_finder_bg-J1Zbzky0.wasm  dsp_seed_finder_bg-ayD7F0qH.wasm  dsp_seed_finder_bg-c3xQBUsM.wasm  dsp_seed_finder_bg-hq2fsncv.wasm  dsp_seed_finder_bg-ps4-YYby.wasm  dsp_seed_finder_bg-r_XQtad8.wasm  dsp_seed_finder_bg-rxs6J0ph.wasm  dsp_seed_finder_bg-uTHHh__A.wasm  dsp_seed_finder_bg-xqWyp1Yl.wasm  exporter.worker-EUiQMqyn.js  exporter.worker-bieoHJBd.js  exporter.worker-q6WZziL5.js  exporterManager.worker--S20oIT6.js  exporterManager.worker-KqyP-XGj.js  exporterManager.worker-zWO51otf.js  index--_jEDO5I.css  index-03x4Yb4a.js  index-2XYgynx3.css  index-6S2iXqay.js  index-7MZx5A7m.js  index-8zzv_DTF.js  index-BJwXGb77.css  index-Ds_5Zwzy.js  index-EDXHG_ab.js  index-ER7c5LyO.css  index-EeoMZX6c.css  index-F_3o2xLG.js  index-I5FimCyi.css  index-P0FLld8M.css  index-PkHj7Gkf.js  index-Pvl8Uhda.js  index-Q_fgfXZ-.js  index-R4BLuuc8.js  index-UQc0yD1x.js  index-Ut0Tdmqv.js  index-VsorwJfK.js  index-Z7I247G6.js  (+31 more)
benches/: create_galaxy.rs
configs/: tsconfig.base.json  tsconfig.js.json  tsconfig.node.json  tsconfig.worker.json
core/: Cargo.toml
core/src/: lib.rs
generator/: Cargo.toml
generator/src/: main.rs
python_generator/: generator.py
src/: database.rs  lib.rs  main.rs  transform_rules.rs
src/data/: birth_points.rs  enums.rs  galaxy.rs  game_desc.rs  macros.rs  math.rs  mod.rs  planet.rs  planet_grid.rs  planet_raw_data.rs  pose.rs  quaternion.rs  random.rs  random_table.rs  rule.rs  simplex_noise.rs  star.rs  star_planets.rs  theme_proto.rs  vector2.rs  vector3.rs  vector_f2.rs  vector_f3.rs  vein.rs
src/rules/: and.rs  average_vein_amount.rs  average_vein_patch.rs  birth.rs  birth_distance.rs  composite.rs  dyson_radius.rs  gas_count.rs  gas_rate.rs  hive_count.rs  luminosity.rs  mod.rs  ocean_type.rs  or.rs  planet_count.rs  planet_in_dyson_count.rs  satellite_count.rs  spectr.rs  spectr_distance.rs  star_type.rs  theme_id.rs  tidal_lock_count.rs  x_distance.rs
src/tests/: mod.rs  worldgen_test.rs
src/worldgen/: enums.rs  galaxy.rs  galaxy_gen.rs  game_desc.rs  mod.rs  name_gen.rs  planet.rs  planet_gen.rs  random.rs  (+5 more)
web/: index.html
(+124 files in other folders)
