[package]
name = "dsp_seed_finder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "dsp_seed"
path = "src/main.rs"

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3.29", default-features = false, features = ["sink", "std"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-tungstenite = "0.21.0"
