[package]
name = "dsp_seed_finder"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "dsp_seed"
path = "src/main.rs"

[dependencies]
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive", "rc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4.70"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
tokio-tungstenite = "0.29.0"
